# ARSLM

./: .gitignore  .init.py  .pypirc  ARSLM engine   ARSLM.init.py  ARSLM.ipynb  Bienvenue_dans_Colab.ipynb  CHANGELOG.md  LICENCE  PROJET_SUMMARY.md  PUBLICATION M_GUIDE.md  Projet   README.md  arslm.py  arslm_init.py  arslm_setup.sh  main.p  main.py  pyproject.toml  pyproject.toml.backup  requirements-vercel.txt  requirements.txt  setup.py  setup_arslm_complete.sh  streamlit_app.py  test_arslm_cpu.py  test_arslm_lora.py  test_arslm_termux.py  vercel.json
.github/workflows/: test.yml
.guthub/workflows/: publish.yml
arslm/: arslm.py
arslm/api/: client.py
arslm/arslm/: profile.py
arslm/arslm/arslm/: inference.py  loader.py
arslm/arslm/core/: adaptative.py
arslm/utils/: tokenizers.py
docs/: ARCHITECTURE.md
lora/finance/: README.md
lora/juridique/: README.md
lora/médical/: README.md
lora/police/: README.md
src/frontend/: app.py
tests/: test_adaptive_sequence_extremes.py.  test_model.py
