[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "arslm"
version = "0.1.0"
description = "Adaptive Reasoning Semantic Language Model - Lightweight AI engine"
readme = "README.md"
authors = [{name="Benjamin Amaad Kama", email="benjokama@hotmail.fr"}]
requires-python = ">=3.9"

dependencies = [
    # Core
    "numpy>=1.21.0,<2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "sentencepiece>=0.1.99",
    # API
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "httpx>=0.24.0",
    # CLI / utils
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]

[tool.setuptools.packages.find]
where=["."]
include=["arslm*"]
exclude=["tests*", "docs*", "examples*"]

[project.scripts]
arslm="arslm.cli.commands:main"
arslm-server="arslm.api.server:run_server"
arslm-train="arslm.cli.train:train_cli"
arslm-eval="arslm.cli.evaluate:eval_cli"